# symphony

./: NOTICE  README.md  SPEC.md
.claude/skills/commit/: SKILL.md
.claude/skills/debug/: SKILL.md
.claude/skills/land/: SKILL.md  land_watch.py
.claude/skills/pull/: SKILL.md
.codex/skills/commit/: SKILL.md
elixir/: AGENTS.md  README.md  WORKFLOW.md  mix.exs
elixir/docs/: logging.md  token_accounting.md
elixir/lib/mix/tasks/: workspace.before_remove.ex
elixir/lib/symphony_elixir/: agent_runner.ex  config.ex  orchestrator.ex  status_dashboard.ex  workspace.ex
elixir/lib/symphony_elixir/claude/: app_server.ex  dynamic_tool.ex
elixir/lib/symphony_elixir/config/: schema.ex
elixir/test/mix/tasks/: workspace_before_remove_test.exs
elixir/test/support/: test_support.exs
elixir/test/support/live_e2e_docker/: Dockerfile  docker-compose.yml
elixir/test/symphony_elixir/: app_server_test.exs  core_test.exs  dynamic_tool_test.exs  extensions_test.exs  live_e2e_test.exs  orchestrator_status_test.exs  ssh_test.exs  status_dashboard_snapshot_test.exs  workspace_and_config_test.exs
rust/: Cargo.toml
rust/src/: config.rs  coordination.rs  domain.rs  execution.rs  integration.rs  lib.rs  main.rs  observability.rs  protocol.rs
rust/src/config/: schema.rs  workflow.rs
