[package]
name = "symphony_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
notify = "8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tempfile = "3"
thiserror = "2"
anyhow = "1"
liquid = "0.26"
chrono = { version = "0.4", features = ["serde"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "symphony"
path = "src/main.rs"
